--- a/Views/userViews/landing.hbs
+++ b/Views/userViews/landing.hbs
@@ -526,7 +526,7 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-									<a class="social-info" onclick="addtocart('{{_id}}'); return false;">
+									<a class="social-info" onclick="addtocart('{{_id}}','{{price}}'); return false;">
 									<span class="ti-bag"></span>
 									<p class="hover-text">add cart</p>
 									</a>
@@ -543,7 +543,7 @@
 		</div>
 		<!-- single product slide -->
 		<div class="single-product-slider">
-			<div class="container">
+			{{!-- <div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-6 text-center">
 						<div class="section-title">
@@ -554,9 +554,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row"> --}}
 					<!-- single product -->
-					<div class="col-lg-3 col-md-6">
+					{{!-- <div class="col-lg-3 col-md-6">
 						<div class="single-product">
 							<img class="img-fluid" src="img/product/p6.jpg" alt="">
 							<div class="product-details">
@@ -587,9 +587,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> --}}
 					<!-- single product -->
-					<div class="col-lg-3 col-md-6">
+					{{!-- <div class="col-lg-3 col-md-6">
 						<div class="single-product">
 							<img class="img-fluid" src="img/product/p8.jpg" alt="">
 							<div class="product-details">
@@ -620,9 +620,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> --}}
 					<!-- single product -->
-					<div class="col-lg-3 col-md-6">
+					{{!-- <div class="col-lg-3 col-md-6">
 						<div class="single-product">
 							<img class="img-fluid" src="img/product/p3.jpg" alt="">
 							<div class="product-details">
@@ -653,9 +653,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> --}}
 					<!-- single product -->
-					<div class="col-lg-3 col-md-6">
+					{{!-- <div class="col-lg-3 col-md-6">
 						<div class="single-product">
 							<img class="img-fluid" src="img/product/p5.jpg" alt="">
 							<div class="product-details">
@@ -686,9 +686,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> --}}
 					<!-- single product -->
-					<div class="col-lg-3 col-md-6">
+					{{!-- <div class="col-lg-3 col-md-6">
 						<div class="single-product">
 							<img class="img-fluid" src="img/product/p1.jpg" alt="">
 							<div class="product-details">
@@ -719,9 +719,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> --}}
 					<!-- single product -->
-					<div class="col-lg-3 col-md-6">
+					{{!-- <div class="col-lg-3 col-md-6">
 						<div class="single-product">
 							<img class="img-fluid" src="img/product/p4.jpg" alt="">
 							<div class="product-details">
@@ -752,9 +752,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> --}}
 					<!-- single product -->
-					<div class="col-lg-3 col-md-6">
+					{{!-- <div class="col-lg-3 col-md-6">
 						<div class="single-product">
 							<img class="img-fluid" src="img/product/p1.jpg" alt="">
 							<div class="product-details">
@@ -785,9 +785,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> --}}
 					<!-- single product -->
-					<div class="col-lg-3 col-md-6">
+					{{!-- <div class="col-lg-3 col-md-6">
 						<div class="single-product">
 							<img class="img-fluid" src="img/product/p8.jpg" alt="">
 							<div class="product-details">
@@ -818,9 +818,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-			</div>
+					</div> --}}
+				{{!-- </div>
+			</div> --}}
 		</div>
 	</section>
 	<!-- end product Area -->
@@ -1161,9 +1161,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
  
     
 	<script>
-		function addtocart(proId) {
+		function addtocart(proId,price) {
 		  $.ajax({
-			url: '/addToCart/' + proId,
+			url: '/addToCart/' + proId + '/' + price,
 			method: 'POST',
 	  
 			success: (response) => {
