--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -1,6 +1,10 @@
 /*--------------------------- Color variations ----------------------*/
 /*--------------------------- Fonts ----------------------*/
 @import url("https://fonts.googleapis.com/css?family=Poppins:500,700|Roboto:400,500");
+
+@import '~@sweetalert2/themes/dark/dark.scss';
+
+
 /* Medium Layout: 1280px */
 /* Tablet Layout: 768px */
 /* Mobile Layout: 320px */
@@ -54,7 +58,7 @@
 
 /* Start Gradient Area css
 ============================================================================================ */
-.gradient-bg, .primary-btn, .add-bag .add-btn, .single-product .product-details .prd-bottom .social-info span:after, .grid-btn:hover, .list-btn:hover, .grid-btn.active, .list-btn.active, .pagination a.active, .pagination a:hover, .s_Product_carousel .owl-dots div.active, .s_product_text .card_area .icon_btn:after, .product_description_area .nav.nav-tabs li a.active, .blog-pagination .page-item.active .page-link, .single-footer-widget .click-btn {
+.gradient-bg, .primary-btn, .add-bag .add-btn, .single-product .product-details .prd-bottom.social-inf .social-info span:after, .grid-btn:hover, .list-btn:hover, .grid-btn.active, .list-btn.active, .pagination a.active, .pagination a:hover, .s_Product_carousel .owl-dots div.active, .s_product_text .card_area .icon_btn:after, .product_description_area .nav.nav-tabs li a.active, .blog-pagination .page-item.active .page-link, .single-footer-widget .click-btn {
   background: -webkit-linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
   background: -moz-linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
   background: -o-linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
@@ -120,9 +124,10 @@ body {
   font-size: 20px;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  color: #515151;
+  color: #666666;
   /* background: #393939;} */
-  background: #181a1e; }
+  background: #181a1e;
+  }
 *{
   font-size: large;
 }
@@ -1286,21 +1291,21 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     color: #ffffff; }
-
+/* 
 .organic-breadcrumb {
-  /* background: url(../img/banner/common-banner.jpg) center no-repeat; */
+  /* background: url(../img/banner/common-banner.jpg) center no-repeat; 
   background-size: cover;
   padding-top: 130px; }
   @media (max-width: 991px) {
     .organic-breadcrumb {
       padding-top: 80px; } }
   @media (max-width: 767px) {
-    .organic-breadcrumb {
+   .organic-breadcrumb {
       background: none;
       background: -webkit-linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
       background: -moz-linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
       background: -o-linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
-      background: linear-gradient(90deg, #ffba00 0%, #ff6c00 100%); } }
+      background: linear-gradient(90deg, #ffba00 0%, #ff6c00 100%); } } 
 
 #category .organic-breadcrumb {
   margin-bottom: 100px; }
@@ -1333,7 +1338,7 @@ h1, h2, h3, h4, h5, h6 {
         width: 48%; } }
     @media (max-width: 767px) {
       .breadcrumb-banner .col-first {
-        width: 100%; } }
+        width: 100%; } } */
 
 .p1-gradient-bg, .details-tab-navigation .nav-link:hover, .details-tab-navigation .nav-link.active, .quick-view-carousel-details .owl-controls .owl-dots .owl-dot.active:after, .organic-body .quick-view-carousel .owl-controls .owl-dots .owl-dot.active:after, .organic-body .organic, .organic-body .organic:hover, .checkput-login .top-title, .register-form, .mini-cart-2a.mini-cart-1 .mini-border, .mini-cart-2a.mini-cart-2 .mini-border, .mini-cart-2a.mini-cart-3 .mini-border, .mini-cart-2a.mini-cart-4 .mini-border, .mini-cart.mini-cart-1 .mini-border, .mini-cart.mini-cart-2 .mini-border, .mini-cart.mini-cart-3 .mini-border, .mini-cart.mini-cart-4 .mini-border, .item-cart, .submit-btn, .submit-btn.color-1, .submit-btn.color-2, .submit-btn.color-3, .submit-btn.color-4, .view-btn.color-1:after, .view-btn.color-2:after, .view-btn.color-3:after, .view-btn.color-4:after, .organic-section-title-left .carousel-trigger .prev-trigger:after, .organic-section-title-left .carousel-trigger .next-trigger:after, .single-search-product:before, .single-organic-product:after, .single-organic-product .bottom, .single-organic-product:hover .discount, .single-furniture-product .bottom, .single-furniture-product:hover .discount, .single-sidebar-product:before, .single-organic-product-list:after {
   background-image: -moz-linear-gradient(45deg, #f6463d 0%, #f6398d 45%, #f52cdc 100%);
@@ -1552,23 +1557,13 @@ h1, h2, h3, h4, h5, h6 {
         -o-transition: all 0.3s ease 0s;
         transition: all 0.3s ease 0s;
         z-index: 1; }
-        /* .single-product .product-details .prd-bottom .social-info span:after {
-          position: absolute;
-          left: 0;
-          top: 0;
-          height: 100%;
-          width: 100%;
-          content: "";
-          border-radius: 50%;
-          opacity: 0;
-          visibility: hidden;
-          z-index: -1; } */
+
       .single-product .product-details .prd-bottom .social-info .hover-text {
         position: absolute;
         left: 0;
         top: 3px;
         width: 100px;
-        left: -40px;
+        left: -30px;
         text-transform: uppercase;
         font-family: "Poppins", sans-serif;
         font-weight: 400;
@@ -1581,14 +1576,14 @@ h1, h2, h3, h4, h5, h6 {
         opacity: 0;
         visibility: hidden; }
       .single-product .product-details .prd-bottom .social-info:hover {
-        width: 200px; }
+        width: 150px; }
         .single-product .product-details .prd-bottom .social-info:hover span:after {
           opacity: 1;
           visibility: visible; }
         .single-product .product-details .prd-bottom .social-info:hover .hover-text {
           opacity: 1;
           visibility: visible;
-          left: 110px; 
+          left: 50px; 
         }
 
 /* end product area css
@@ -3122,7 +3117,7 @@ label {
 
 .filter-bar {
   padding: 0px 20px 10px 20px;
-  background: #828bb3; }
+  background: #52596a; }
   .filter-bar a, .filter-bar i {
     color: #000; }
 
@@ -3298,7 +3293,7 @@ label {
 
 .sidebar-categories .head {
   line-height: 60px;
-  background: #828bb3;
+  background: #52596a;
   padding: 0 30px;
   font-size: 16px;
   font-weight: 400;
@@ -4487,7 +4482,7 @@ label {
 .cupon_area {
   margin-bottom: 40px; }
   .cupon_area input {
-    margin-left: 30px;
+    margin-left: 0px;
     max-width: 730px;
     width: 100%;
     display: block;
@@ -4500,7 +4495,7 @@ label {
     margin-top: 20px;
     margin-bottom: 20px; }
   .cupon_area .tp_btn {
-    margin-left: 30px; }
+    margin-left: 0px; }
 
 .tp_btn {
   border: 1px solid #eeeeee;
@@ -4660,7 +4655,7 @@ label {
   border-bottom: 1px solid #eee;
   padding-bottom: 12px;
   font-size: 18px;
-  color: #222222;
+  color: #fff;
   padding-left: 18px; }
 .order_d_inner .details_item .list {
   padding-left: 18px; }
@@ -4673,7 +4668,7 @@ label {
       margin-bottom: 0px; }
     .order_d_inner .details_item .list li a {
       font-size: 14px;
-      color: #222222;
+      color: #fff;
       font-family: "Roboto", sans-serif; }
       .order_d_inner .details_item .list li a span {
         width: 145px;
@@ -5215,9 +5210,10 @@ label {
   background: #fff; }
 
 .blog_right_sidebar {
-  border: 1px solid #eeeeee;
-  background: #e5ecee;
-  padding: 30px; }
+  border: 1px solid #fff;
+
+  padding: 30px;
+  }
   .blog_right_sidebar .widget_title {
     font-size: 18px;
     line-height: 25px;
@@ -5262,13 +5258,14 @@ label {
   .blog_right_sidebar .author_widget {
     text-align: left
     ; }
-    .blog_right_sidebar .author_widget h4 {
+    .blog_right_sidebar .author_widget h4  {
       font-size: 18px;
       line-height: 20px;
       color: #222222;
       margin-bottom: 5px;
-      margin-top: 30px; }
-    .blog_right_sidebar .author_widget p {
+      margin-top: 30px; 
+    margin-right: 0px;}
+    .blog_right_sidebar .author_widget p a {
       margin-bottom: 0px; }
     .blog_right_sidebar .author_widget .social_icon {
       padding: 7px 0px 15px; }
@@ -5527,9 +5524,11 @@ label {
   .comments-area a {
     color: #222222; }
   .comments-area .comment-list {
-    padding-bottom: 48px; }
+    padding-bottom: 3px;
+    }
     .comments-area .comment-list:last-child {
-      padding-bottom: 0px; }
+      padding-bottom: 3px;
+      }
     .comments-area .comment-list.left-padding {
       padding-left: 25px; }
     @media (max-width: 413px) {
@@ -5929,6 +5928,13 @@ label {
      
       /* popup ends------------------------------ */
 
+
+
+
+
+
+
+
       .info-wrapper:hover{
           background-color: #e98a38;
           color: white;
@@ -5967,6 +5973,12 @@ label {
       }
 
 
+
+
+
+      /* profile options  box starts------------------------------ */
+
+
 .top-title-section{
 box-sizing: border-box;
 width: 100%;
@@ -5986,3 +5998,154 @@ line-height: 50px;
 letter-spacing: 1px;
 font-weight: 600;
 }
+
+
+.pfl-wrapper {
+	display: block;
+	width: auto;
+	height: 100%;
+	padding: 40px;
+	margin: 50px;
+	background-color: #f1deda;
+	box-shadow: 0 0 50px rgba(0, 0, 0, 0.08);
+	overflow: auto;
+}
+
+ 
+
+article {
+  display: block;
+  width: auto;
+  height: auto;
+  padding: 50px 0;
+  overflow: auto;
+}
+
+article .profile-photo {
+  display: block;
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  background-color: white;
+  margin: 0 auto;
+  background-image: url('../img/userprofile.png');
+  background-size: 230%;
+  background-position: 80% 0%;
+  background-repeat: no-repeat;
+}
+
+article .profile-info {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+article .profile-info h1 {
+  font-size: 2em;
+  font-weight: 600;
+  margin-top: 0.5em;
+}
+
+article .profile-info p {
+  color: #fff;
+}
+
+
+article .posts .tile {
+  display: inline-block;
+  float: left;
+  margin-bottom: 30px;
+}
+
+article .posts .tile:nth-of-type(2n+1) {
+  clear: both;
+}
+
+article .posts .tile .inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
+  transition: box-shadow 0.25s;
+  text-align: center; 
+}
+
+
+
+
+
+article .posts .tile .inner a {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+article .posts .tile .inner a h4 {
+  font-size: 1.1em;
+  line-height: 1.4em;
+  padding: 40px 15px 40px 15px;
+  color: rgba(50, 32, 32, 0.6);
+  transition: color 0.25s;
+  margin: 0; /* Add this line to remove default margin */
+}
+
+article .posts .tile .inner:hover {
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.08);
+  transition: box-shadow 0.25s;
+}
+
+article .posts .tile .inner:hover h4 {
+  color: #ffba00;
+  transition: color 0.25s;
+}
+
+ 
+
+@media (max-width: 480px) {
+  .pfl-wrapper {
+    margin: 30px;
+    padding: 40px 0 0;
+  }
+
+  article .profile-info {
+    padding: 0 30px;
+  }
+  article .profile-info p{
+    color: #fff;
+  }
+
+}
+/* profile options  box ends------------------------------ */
+
+/*----------------------------------ORANGE BUTTON------------------------------ */
+
+#btn {
+
+  min-width: 160px;
+  padding: 10px 25px;
+  transition: all 300ms ease;
+  color: #fff;
+  font-weight: 500;
+  text-align:center;
+  letter-spacing: 1px;
+  background-color: #e47312;
+  border: 0;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+#btn:hover {
+  background-color: #e98a38;
+}
+/*----------------------------------ORANGE BUTTON------------------------------ */
